--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 
-<html lang="en">
-
+<html lang="ko">
 <head>
 	<meta charset="UTF-8">
-	<title>namu.html</title>
+	<title>과제하는 나무를 위한 페이지</title>
 	<script>
 		var calc = function(){
 			var PI = 3.14159265358979323846;
@@ -50,26 +49,22 @@
 <body>
 	<h1>NAMU</h1>
 	<pre>
-d0 : <input type="text"/>
-di : <input type="text"/>
-d  : <input type="text"/>
-L1 : <input type="text"/>
-L2 : <input type="text"/>
-L3 : <input type="text"/>
-E1 : <input type="text"/>
-E2 : <input type="text"/>
-E3 : <input type="text"/>
-Pc : <input type="text"/>
-
-<button onclick="calc()">calculate</button>
-
-s1 : <input type="text"/>
-s2 : <input type="text"/>
-s3 : <input type="text"/>
-Ub : <input type="text"/>
-Uc : <input type="text"/>
+		d0 : <input type="text"/>
+		di : <input type="text"/>
+		d  : <input type="text"/>
+		L1 : <input type="text"/>
+		L2 : <input type="text"/>
+		L3 : <input type="text"/>
+		E1 : <input type="text"/>
+		E2 : <input type="text"/>
+		E3 : <input type="text"/>
+		Pc : <input type="text"/>
+		<button onclick="calc()">calculate</button>
+		s1 : <input type="text"/>
+		s2 : <input type="text"/>
+		s3 : <input type="text"/>
+		Ub : <input type="text"/>
+		Uc : <input type="text"/>
 	</pre>
-
-
 </body>
 </html>
