--- a/index.html
+++ b/index.html
@@ -47,24 +47,27 @@
 </head>
 
 <body>
-	<h1>NAMU</h1>
-	<pre>
-		d0 : <input type="text"/>
-		di : <input type="text"/>
-		d  : <input type="text"/>
-		L1 : <input type="text"/>
-		L2 : <input type="text"/>
-		L3 : <input type="text"/>
-		E1 : <input type="text"/>
-		E2 : <input type="text"/>
-		E3 : <input type="text"/>
-		Pc : <input type="text"/>
-		<button onclick="calc()">calculate</button>
-		s1 : <input type="text"/>
-		s2 : <input type="text"/>
-		s3 : <input type="text"/>
-		Ub : <input type="text"/>
-		Uc : <input type="text"/>
-	</pre>
+<div class = "layer">
+<h1>NAMU</h1>
+<pre>
+d0 : <input type="text"/>
+di : <input type="text"/>
+d  : <input type="text"/>
+L1 : <input type="text"/>
+L2 : <input type="text"/>
+L3 : <input type="text"/>
+E1 : <input type="text"/>
+E2 : <input type="text"/>
+E3 : <input type="text"/>
+Pc : <input type="text"/>
+<button onclick="calc()">calculate</button>
+s1 : <input type="text"/>
+s2 : <input type="text"/>
+s3 : <input type="text"/>
+Ub : <input type="text"/>
+Uc : <input type="text"/>
+</pre>
+</div>
+
 </body>
 </html>
