--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
-	<title>과제하는 나무를 위한 페이지</title>
+	<title>과제하는 나무를 위한 </title>
 	<script>
 		var calc = function(){
 			var PI = 3.14159265358979323846;
