--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<title>과제하는 나무를 위한 페이지</title>
 	<script>
-		var calc = function(){
+		var calc = function()
+		{
 			var PI = 3.14159265358979323846;
 
 			var d0 = parseFloat(document.getElementsByTagName("input")[0].value);
@@ -21,24 +22,24 @@
 			var E3 = parseFloat(document.getElementsByTagName("input")[8].value);
 			var Pc = parseFloat(document.getElementsByTagName("input")[9].value);
 
-            var f1 = (4 * L1) / (PI * (d0 * d0 - di * di) * E1);
-            var f2 = (4 * L2) / (PI * (d * d) * E2);
-            var f3 = (4 * L3) / (PI * (d * d) * E3);
+			var f1 = (4 * L1) / (PI * (d0 * d0 - di * di) * E1);
+			var f2 = (4 * L2) / (PI * (d * d) * E2);
+			var f3 = (4 * L3) / (PI * (d * d) * E3);
 
-            var F2 = f3 / (f1 + f2 + f3) * Pc;
-            var F1 = F2;
-            var F3 = F2 - Pc;
+			var F2 = f3 / (f1 + f2 + f3) * Pc;
+			var F1 = F2;
+			var F3 = F2 - Pc;
 
-            var A1 = (PI / 4) * ((d0 * d0) - (di * di));
-            var A2 = (PI / 4) * ((d * d));
-            var A3 = A2;
+			var A1 = (PI / 4) * ((d0 * d0) - (di * di));
+			var A2 = (PI / 4) * ((d * d));
+			var A3 = A2;
 
-            var s1 = F1 / A1;
-	        var s2 = F2 / A2;
-	        var s3 = F3 / A3;
+			var s1 = F1 / A1;
+			var s2 = F2 / A2;
+			var s3 = F3 / A3;
 
-            var Ub = f1 * F1;
-            var Uc = (-1) * f3 * F3;
+			var Ub = f1 * F1;
+			var Uc = (-1) * f3 * F3;
 
 			document.getElementsByTagName("input")[10].value = s1;
 			document.getElementsByTagName("input")[11].value = s2;
